@@ -1,5 +1,5 @@
 /*
- * Copyright 2000-2015 JetBrains s.r.o.
+ * Copyright 2000-2017 JetBrains s.r.o.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -24,11 +24,9 @@ import org.junit.Test;
 
 import java.io.File;
 import java.io.IOException;
-import java.util.regex.Matcher;
-import java.util.regex.Pattern;
 
 import static org.assertj.core.api.Assertions.assertThat;
-import static org.junit.Assert.*;
+import static org.junit.Assert.assertEquals;
 
 public class VMOptionsTest {
   @Rule public TempDirectory myTempDir = new TempDirectory();
@@ -38,120 +36,100 @@ public class VMOptionsTest {
   @Before
   public void setUp() throws IOException {
     myFile = myTempDir.newFile("vmoptions.txt");
-    FileUtil.writeToFile(myFile, "-Xmx512m\n-XX:MaxPermSize=128m");
-    VMOptions.setTestFile(myFile.getPath());
+    FileUtil.writeToFile(myFile, "-Xmx512m\n-XX:MaxMetaspaceSize=128m");
+    System.setProperty("jb.vmOptionsFile", myFile.getPath());
   }
 
   @After
   public void tearDown() {
-    VMOptions.clearTestFile();
-  }
-
-  @Test
-  public void testRegExpr() {
-    Pattern p = VMOptions.MemoryKind.HEAP.pattern;
-
-    Matcher m = p.matcher("-option -Xmx128mb -option");
-    assertTrue(m.find());
-    assertEquals("128", m.group(1));
-    assertEquals("mb", m.group(2));
-
-    m = p.matcher("-option -Xmx -option");
-    assertTrue(m.find());
-    assertEquals("", m.group(1));
-    assertEquals("", m.group(2));
-
-    m = p.matcher("-option -Xxx -option");
-    assertFalse(m.find());
+    System.clearProperty("jb.vmOptionsFile");
   }
 
   @Test
   public void testReading() {
-    assertEquals(512, VMOptions.readXmx());
-    assertEquals(128, VMOptions.readMaxPermGen());
+    assertEquals(512, VMOptions.readOption(VMOptions.MemoryKind.HEAP, false));
+    assertEquals(128, VMOptions.readOption(VMOptions.MemoryKind.METASPACE, false));
   }
 
   @Test
   public void testReadingEmpty() throws IOException {
     FileUtil.writeToFile(myFile, "");
 
-    assertEquals(-1, VMOptions.readXmx());
-    assertEquals(-1, VMOptions.readMaxPermGen());
+    assertEquals(-1, VMOptions.readOption(VMOptions.MemoryKind.HEAP, false));
+    assertEquals(-1, VMOptions.readOption(VMOptions.MemoryKind.METASPACE, false));
   }
 
   @Test
   public void testReadingKilos() throws IOException {
-    FileUtil.writeToFile(myFile, "-Xmx512000k -XX:MaxPermSize=128000K -XX:ReservedCodeCacheSize=256000K");
+    FileUtil.writeToFile(myFile, "-Xmx512000k -XX:MaxMetaspaceSize=128000K -XX:ReservedCodeCacheSize=256000K");
 
-    assertEquals(512000 / 1024, VMOptions.readXmx());
-    assertEquals(128000 / 1024, VMOptions.readMaxPermGen());
-    assertEquals(256000 / 1024, VMOptions.readCodeCache());
+    assertEquals(512000 / 1024, VMOptions.readOption(VMOptions.MemoryKind.HEAP, false));
+    assertEquals(128000 / 1024, VMOptions.readOption(VMOptions.MemoryKind.METASPACE, false));
+    assertEquals(256000 / 1024, VMOptions.readOption(VMOptions.MemoryKind.CODE_CACHE, false));
   }
 
   @Test
   public void testReadingGigs() throws IOException {
-    FileUtil.writeToFile(myFile, "-Xmx512g\n-XX:MaxPermSize=128G");
+    FileUtil.writeToFile(myFile, "-Xmx512g\n-XX:MaxMetaspaceSize=128G");
 
-    assertEquals(512 * 1024, VMOptions.readXmx());
-    assertEquals(128 * 1024, VMOptions.readMaxPermGen());
+    assertEquals(512 * 1024, VMOptions.readOption(VMOptions.MemoryKind.HEAP, false));
+    assertEquals(128 * 1024, VMOptions.readOption(VMOptions.MemoryKind.METASPACE, false));
   }
 
   @Test
   public void testReadingWithoutUnit() throws IOException {
-    FileUtil.writeToFile(myFile, "-Xmx512\n-XX:MaxPermSize=128");
+    FileUtil.writeToFile(myFile, "-Xmx512\n-XX:MaxMetaspaceSize=128");
 
-    assertEquals(512, VMOptions.readXmx());
-    assertEquals(128, VMOptions.readMaxPermGen());
+    assertEquals(512, VMOptions.readOption(VMOptions.MemoryKind.HEAP, false));
+    assertEquals(128, VMOptions.readOption(VMOptions.MemoryKind.METASPACE, false));
   }
 
   @Test
   public void testWriting() throws IOException {
-    VMOptions.writeXmx(1024);
-    VMOptions.writeMaxPermGen(256);
+    VMOptions.writeOption(VMOptions.MemoryKind.HEAP, 1024);
+    VMOptions.writeOption(VMOptions.MemoryKind.METASPACE, 512);
 
-    assertThat(FileUtil.loadFile(myFile)).isEqualToIgnoringWhitespace("-Xmx1024m\n-XX:MaxPermSize=256m");
+    assertThat(FileUtil.loadFile(myFile)).isEqualToIgnoringWhitespace("-Xmx1024m -XX:MaxMetaspaceSize=512m");
   }
 
   @Test
   public void testWritingPreservingLocation() throws IOException {
-    FileUtil.writeToFile(myFile, "-someOption\n-Xmx512m\n-XX:MaxPermSize=128m\n-anotherOption");
+    FileUtil.writeToFile(myFile, "-someOption\n-Xmx512m\n-XX:MaxMetaspaceSize=128m\n-anotherOption");
 
-    VMOptions.writeXmx(1024);
-    VMOptions.writeMaxPermGen(256);
+    VMOptions.writeOption(VMOptions.MemoryKind.HEAP, 1024);
+    VMOptions.writeOption(VMOptions.MemoryKind.METASPACE, 256);
 
-    assertThat(FileUtil.loadFile(myFile)).isEqualToIgnoringWhitespace("-someOption\n-Xmx1024m\n-XX:MaxPermSize=256m\n-anotherOption");
+    assertThat(FileUtil.loadFile(myFile)).isEqualToIgnoringWhitespace("-someOption -Xmx1024m -XX:MaxMetaspaceSize=256m -anotherOption");
   }
 
   @Test
   public void testWritingNew() throws IOException {
     FileUtil.writeToFile(myFile, "-someOption");
 
-    VMOptions.writeXmx(1024);
-    VMOptions.writeMaxPermGen(256);
-    VMOptions.writeCodeCache(256);
+    VMOptions.writeOption(VMOptions.MemoryKind.HEAP, 1024);
+    VMOptions.writeOption(VMOptions.MemoryKind.METASPACE, 256);
+    VMOptions.writeOption(VMOptions.MemoryKind.CODE_CACHE, 256);
 
-    assertThat(FileUtil.loadFile(myFile)).isEqualToIgnoringWhitespace("-someOption\n-Xmx1024m\n-XX:MaxPermSize=256m\n-XX:ReservedCodeCacheSize=256m");
+    assertThat(FileUtil.loadFile(myFile)).isEqualToIgnoringWhitespace("-someOption -Xmx1024m -XX:MaxMetaspaceSize=256m -XX:ReservedCodeCacheSize=256m");
   }
 
   @Test
   public void testWritingReadOnlyFile() throws IOException {
     FileUtil.setReadOnlyAttribute(myFile.getPath(), true);
 
-    VMOptions.writeXmx(1024);
-    VMOptions.writeMaxPermGen(256);
+    VMOptions.writeOption(VMOptions.MemoryKind.HEAP, 1024);
+    VMOptions.writeOption(VMOptions.MemoryKind.METASPACE, 256);
 
-    assertThat(FileUtil.loadFile(myFile)).isEqualToIgnoringWhitespace("-Xmx1024m\n-XX:MaxPermSize=256m");
+    assertThat(FileUtil.loadFile(myFile)).isEqualToIgnoringWhitespace("-Xmx1024m -XX:MaxMetaspaceSize=256m");
   }
 
   @Test
   public void testWritingNonExistingFile() throws IOException {
-    File testFile = myTempDir.newFile("vmoptions.non.existing.txt");
-    FileUtil.delete(testFile);
-    VMOptions.setTestFile(testFile.getPath());
+    FileUtil.delete(myFile);
 
-    VMOptions.writeXmx(1024);
-    VMOptions.writeMaxPermGen(256);
+    VMOptions.writeOption(VMOptions.MemoryKind.HEAP, 1024);
+    VMOptions.writeOption(VMOptions.MemoryKind.METASPACE, 256);
 
-    assertThat(FileUtil.loadFile(testFile)).isEqualToIgnoringWhitespace("-Xmx1024m\n-XX:MaxPermSize=256m");
+    assertThat(FileUtil.loadFile(myFile)).isEqualToIgnoringWhitespace("-Xmx1024m -XX:MaxMetaspaceSize=256m");
   }
 }
